<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ActivityContacto">

    <!-- Nombre-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/tvNombreContacto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/TextoNombre"
            android:textSize="@dimen/tvNombreContacto" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/etNombreCtt"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/etContacto" />
    </LinearLayout>

    <!-- Correo-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/tvCorreo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/TextoCorreo"
            android:textSize="@dimen/tvNombreContacto" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/etMailCtt"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/etContacto" />
    </LinearLayout>

    <!-- Mensaje-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/tvMensaje"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/TextoMensaje"
            android:textSize="@dimen/tvNombreContacto" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/etMsjCtt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/etContacto" />
    </LinearLayout>

    <!-- Botón-->
    <!--TODO: Configurar envía de mail-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/BtnEnviar"/>
    </LinearLayout>



</LinearLayout>