<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cvMascota"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:layout_marginBottom="@dimen/activity_vertical_margin"
    card_view:cardCornerRadius="@dimen/corner_radius_cardview"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/activity_horizontal_margin">

        <ImageView
            android:id="@+id/imgFoto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/perro1"
            android:contentDescription="@string/descripcion"/>


            <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginStart="@dimen/left">

                <TextView
                    android:id="@+id/tvNombre"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/m_nombre"
                    android:textStyle="bold"
                    android:textSize="@dimen/nombre_mascota_cardview"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingLeft="150sp">

                    <ImageButton
                        android:id="@+id/btnlike"
                        android:layout_width="38sp"
                        android:layout_height="38sp"
                        android:background="@drawable/hueso"
                        android:contentDescription="@string/favorito" />
                    <TextView
                        android:id="@+id/tvLike"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/nombre_mascota_cardview"
                        android:text="@string/pLike"
                        />
             </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>